<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/widget_background"
    android:gravity="center"
    android:orientation="horizontal"
    android:padding="8dp">

    <ImageButton
        android:id="@+id/widget_btn_power"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/widget_button_bg"
        android:contentDescription="@string/action_power"
        android:src="@drawable/ic_power" />

    <ImageButton
        android:id="@+id/widget_btn_vol_down"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/widget_button_bg"
        android:contentDescription="@string/action_vol_down"
        android:src="@drawable/ic_volume_down" />

    <ImageButton
        android:id="@+id/widget_btn_vol_up"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="@drawable/widget_button_bg"
        android:contentDescription="@string/action_vol_up"
        android:src="@drawable/ic_volume_up" />

</LinearLayout>
